--- a/.github/workflows/auto-deploy.yml
+++ b/.github/workflows/auto-deploy.yml
@@ -7,13 +7,22 @@ jobs:
     runs-on: ubuntu-latest
     steps:
 
-    - name: Publish Docker image
-      uses: flownative/action-docker-build@v1
+    - name: Login to Github container registry
+      uses: docker/login-action@v2
       with:
-        tag_ref: ${{ github.ref }}
-        image_name: princebillygk/portfolio-backend
-        image_tag: ${{ github.sha }}
-        registry_password: ${{ github.token }}
+        registry: ghcr.io
+        username: ${{ github.repository_owner }}
+        password: ${{ github.token }}
+
+    - name: Build and push to Github package
+      uses: docker/build-push-action@v3
+      with:
+        context: .
+        platforms: linux/amd64,linux/arm64
+        push: true
+        tags: |
+          princebillygk/portfolio-backend:latest
+          princebillygk/portfolio-backend:${{ github.sha }}
 
     - name: Deploy to Web
       uses: azure/webapps-deploy@v2
