--- a/.github/workflows/auto-deploy.yml
+++ b/.github/workflows/auto-deploy.yml
@@ -20,9 +20,8 @@ jobs:
         context: .
         platforms: linux/amd64,linux/arm64
         push: true
-        tags: |
-          princebillygk/portfolio-backend:latest
-          princebillygk/portfolio-backend:${{ github.sha }}
+        tags: princebillygk/portfolio-backend:${{ github.sha }}
+
 
     - name: Deploy to Web
       uses: azure/webapps-deploy@v2
