--- a/.github/workflows/auto-deploy.yml
+++ b/.github/workflows/auto-deploy.yml
@@ -10,7 +10,7 @@ jobs:
     - name: Build & push Docker image
       uses: mr-smithers-excellent/docker-build-push@v5
       with:
-        image: princebillygk/portfolio-backend
+        image: portfolio-backend
         tags: ${{ github.sha }}, latest
         registry: ghcr.io
         username: ${{ github.repository_owner }}
