--- a/.github/workflows/auto-deploy.yml
+++ b/.github/workflows/auto-deploy.yml
@@ -7,15 +7,14 @@ jobs:
     runs-on: ubuntu-18.04
     steps:
 
-    - name: Build & push Docker image
-      uses: mr-smithers-excellent/docker-build-push@v5
+    - name: Publish to github package
+      uses: elgohr/Publish-Docker-Github-Action@v4
       with:
-        image: portfolio-backend
-        tags: ${{ github.sha }}, latest
-        registry: ghcr.io
+        name: princebillygk/portfolio-backend
         username: ${{ github.repository_owner }}
         password: ${{ github.token }}
-        dockerfile: Dockerfile
+        tags: ${{ github.sha }}, latest
+        registry: ghcr.io
 
     - name: Deploy to Web
       uses: azure/webapps-deploy@v2
