--- a/.github/workflows/auto-deploy.yml
+++ b/.github/workflows/auto-deploy.yml
@@ -7,15 +7,22 @@ jobs:
     runs-on: ubuntu-latest
     steps:
 
-    - name: Build & push Docker image
-      uses: mr-smithers-excellent/docker-build-push@v5
+    - name: Login to Github container registry
+      uses: docker/login-action@v2
       with:
-        image: portfolio-backend
-        tags: ${{ github.sha }}, latest
         registry: ghcr.io
         username: ${{ github.repository_owner }}
         password: ${{ github.token }}
-        dockerfile: Dockerfile
+
+    - name: Build and push to Github package
+      uses: docker/build-push-action@v3
+      with:
+        context: .
+        push: true
+        tags: |
+          portfolio-backend:latest
+          portfolio-backend:${{ github.sha }}
+
 
     - name: Deploy to Web
       uses: azure/webapps-deploy@v2
