now it will definetly work

--- a/.github/workflows/auto-deploy.yml
+++ b/.github/workflows/auto-deploy.yml
@@ -13,7 +13,7 @@ jobs:
       uses: docker/login-action@v2
       with:
         registry: ghcr.io
-        username: ${{ princebillygk }}
+        username: princebillygk
         password: ${{ secrets.GITHUB_TOKEN }}
 
     - name: Build and push to Github package
