--- a/.github/workflows/auto-deploy.yml
+++ b/.github/workflows/auto-deploy.yml
@@ -13,8 +13,8 @@ jobs:
       uses: docker/login-action@v2
       with:
         registry: ghcr.io
-        username: princebillygk
-        password: ${{ secrets.GITHUB_TOKEN }}
+        username: ${{ github.repository_owner }}
+        password: ${{ github.token }}
 
     - name: Build and push to Github package
       uses: docker/build-push-action@v3
@@ -22,8 +22,8 @@ jobs:
         context: .
         push: true
         tags: |
-          portfolio-backend:latest
-          portfolio-backend:${{ github.sha }}
+          princebillygk/portfolio-backend:latest
+          princebillygk/portfolio-backend:${{ github.sha }}
 
 
     - name: Deploy to Web
