--- a/.github/workflows/auto-deploy.yml
+++ b/.github/workflows/auto-deploy.yml
@@ -13,8 +13,8 @@ jobs:
       uses: docker/login-action@v2
       with:
         registry: ghcr.io
-        username: ${{ github.repository_owner }}
-        password: ${{ github.token }}
+        username: princebillygk
+        password: ${{ secrets.GITHUB_TOKEN }}
 
     - name: Build and push to Github package
       uses: docker/build-push-action@v3
