--- a/.github/workflows/auto-deploy.yml
+++ b/.github/workflows/auto-deploy.yml
@@ -21,6 +21,7 @@ jobs:
       with:
         context: .
         push: true
+        file: Dockerfile.ci
         tags: |
           ghcr.io/princebillygk/portfolio-backend:latest
           ghcr.io/princebillygk/portfolio-backend:${{ github.sha }}
