--- a/Dockerfile.ci
+++ b/Dockerfile.ci
@@ -7,13 +7,11 @@ COPY go.mod ./
 RUN go mod download && go mod verify
 
 COPY . .
-# RUN go build -v -o /usr/local/bin/ ./...
-RUN go build -v -o ./cmd/api/api ./cmd/api/main.go
-
-
+RUN go build -v -o /usr/local/bin/ ./...
+COPY ./frontend/ ./usr/frontend/
 
 EXPOSE 80
-CMD ["./cmd/api/api"]-
+CMD ["api"]-
 
 # Github package requirement
 # LABEL org.opencontainers.image.source https://github.com/princebillyGK/my-portfolio-backend
