--- a/Dockerfile.ci
+++ b/Dockerfile.ci
@@ -7,7 +7,8 @@ COPY go.mod ./
 RUN go mod download && go mod verify
 
 COPY . .
-RUN mv ./frontend /usr/frontend
+COPY frontend /usr/frontend
+
 RUN go build -v -o /usr/local/bin/ ./...
 
 
