--- a/Dockerfile.ci
+++ b/Dockerfile.ci
@@ -6,7 +6,7 @@ WORKDIR /usr/src/app
 COPY go.mod ./
 RUN go mod download && go mod verify
 
-COPY . .
+COPY **/*.go .
 COPY frontend /usr/frontend
 
 RUN go build -v -o /usr/local/bin/ ./...
