--- a/Dockerfile.ci
+++ b/Dockerfile.ci
@@ -4,13 +4,13 @@ WORKDIR /usr/src/app
 
 # pre-copy/cache go.mod for pre-downloading dependencies and only redownloading them in subsequent builds if they change
 COPY go.mod ./
-RUN go mod download && go mod verify
+COPY go.sum ./
+RUN go mod download
 
 COPY **/*.go .
-COPY frontend /usr/frontend
-
 RUN go build -v -o /usr/local/bin/ ./...
 
+COPY frontend /usr/frontend
 
 EXPOSE 80
 CMD ["api"]-
