--- a/Dockerfile.ci
+++ b/Dockerfile.ci
@@ -7,7 +7,7 @@ COPY go.mod ./
 COPY go.sum ./
 RUN go mod download
 
-COPY **/*.go .
+COPY */*.go .
 RUN go build -v -o /usr/local/bin/ ./...
 
 COPY frontend /usr/frontend
