--- a/.github/workflows/auto-deploy.yml
+++ b/.github/workflows/auto-deploy.yml
@@ -27,9 +27,9 @@ jobs:
           ghcr.io/princebillygk/portfolio-backend:${{ github.sha }}
 
 
-    # - name: Deploy to Web
-    #   uses: azure/webapps-deploy@v2
-    #   with:
-    #     app-name: 'princebillygk'
-    #     publish-profile: ${{ secrets.AZURE_WEBAPP_PUBLISH_PROFILE }}
-    #     images: 'ghcr.io/princebillygk/portfolio-backend:${{ github.sha }}'
+    - name: Deploy to Web
+      uses: azure/webapps-deploy@v2
+      with:
+        app-name: 'princebillygk'
+        publish-profile: ${{ secrets.AZURE_WEBAPP_PUBLISH_PROFILE }}
+        images: 'ghcr.io/princebillygk/portfolio-backend:${{ github.sha }}'
