--- a/Dockerfile.ci
+++ b/Dockerfile.ci
@@ -2,17 +2,16 @@ FROM golang:1.18
 
 WORKDIR /usr/src/app
 
-# pre-copy/cache go.mod for pre-downloading dependencies and only redownloading them in subsequent builds if they change
-ADD go.mod ./
-RUN go mod download
+COPY go.mod go.sum ./
+RUN go mod download && go mod verify
 
-ADD . .
-RUN go build -v -o /usr/local/bin/ ./...
+COPY . .
+COPY frontend/ /usr/frontend/
 
-ADD frontend/ /usr/frontend/
+RUN go build -v -o /usr/local/bin/app ./...
 
 EXPOSE 80
-CMD ["api"]-
+CMD ["app"]
 
 # Github package requirement
 # LABEL org.opencontainers.image.source https://github.com/princebillyGK/my-portfolio-backend
