--- a/Dockerfile.ci
+++ b/Dockerfile.ci
@@ -6,9 +6,9 @@ COPY go.mod go.sum ./
 RUN go mod download && go mod verify
 
 COPY . .
-COPY frontend/ /usr/frontend/
+RUN go build -v -o /usr/local/bin/ ./...
 
-RUN go build -v -o /usr/local/bin/app ./...
+COPY frontend/ /usr/frontend/
 
 EXPOSE 80
 CMD ["app"]
