--- a/Dockerfile.ci
+++ b/Dockerfile.ci
@@ -8,7 +8,7 @@ RUN go mod download && go mod verify
 COPY . .
 RUN go build -v -o /usr/local/bin/ ./...
 
-COPY frontend/ /usr/
+COPY frontend /usr/
 
 EXPOSE 80
 CMD ["api"]
