--- a/Dockerfile.ci
+++ b/Dockerfile.ci
@@ -6,9 +6,9 @@ COPY go.mod go.sum ./
 RUN go mod download && go mod verify
 
 COPY . .
-RUN go build -v -o /usr/local/bin/ ./...
+RUN go build -v -o ~/portfolio/cmd/bin/ ./...
 
-COPY frontend /usr/
+RUN mv frontend ~/portfolio/frontend
 
 EXPOSE 80
 CMD ["api"]
