--- a/Dockerfile.ci
+++ b/Dockerfile.ci
@@ -11,7 +11,7 @@ RUN go build -v -o ~/portfolio/cmd/bin/ ./...
 RUN mv frontend ~/portfolio/frontend
 
 EXPOSE 80
-CMD ["api"]
+CMD ["~/.portfolio/cmd/bin/api"]
 
 # Github package requirement
 # LABEL org.opencontainers.image.source https://github.com/princebillyGK/my-portfolio-backend
