--- a/.github/workflows/auto-deploy.yml
+++ b/.github/workflows/auto-deploy.yml
@@ -8,6 +8,8 @@ jobs:
     steps:
 
     - uses: actions/checkout@v2
+      with: 
+        submodules: true
 
     - name: Login to Github container registry
       uses: docker/login-action@v2
