--- a/Dockerfile.ci
+++ b/Dockerfile.ci
@@ -2,16 +2,17 @@ FROM golang:1.18
 
 WORKDIR /usr/src/app
 
+# pre-copy/cache go.mod for pre-downloading dependencies and only redownloading them in subsequent builds if they change
 COPY go.mod go.sum ./
 RUN go mod download && go mod verify
 
 COPY . .
-RUN go build -v -o ~/portfolio/cmd/bin/ ./...
-
+RUN go build -v -o /usr/local/bin ./...
 RUN mv frontend ~/portfolio/frontend
 
 EXPOSE 80
-CMD ["~/.portfolio/cmd/bin/api"]
+
+CMD ["api"]
 
 # Github package requirement
 LABEL org.opencontainers.image.source https://github.com/princebillyGK/my-portfolio-backend
